--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "reddit-viewer-redux",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "http://morozec.github.io/RedditViewer",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.9.0",
     "react-autobind": "^1.0.6",
     "react-dom": "^16.9.0",
@@ -13,6 +15,8 @@
     "seamless-immutable": "^7.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
